# StrategyGameEngine

./: CMakeLists.txt  README.md  main.cpp
Engine/: CMakeLists.txt
Engine/include/: IAtackable.h  Utils.h
Engine/include/Components/: IComponent.h  IStructure.h
Engine/include/Entities/: Actor.h  Animal.h  AnimalFactory.h  IEntity.h
Engine/include/Map/: IMap.h  MapFactory.h  StartingMap.h
Engine/resources/: animals.json  maps.json
Engine/src/: Actor.cpp  Animal.cpp  AnimalFactory.cpp  MapFactory.cpp  StartingMap.cpp
